flapivor/tests/m3/hopix/typechecker/bad/40-record-matching-07.hopix
type T<a> = { x : a }

val main : Int = case { x = 0 }<Int> { { x = (_ : String) }<Int> => 0 }